@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rtrace.1,v 1.13 2005/06/14 03:34:14 greg Exp $"
+.\" RCSid "$Id: rtrace.1,v 1.14 2006/02/05 22:22:20 greg Exp $"
 .TH RTRACE 1 10/17/97 RADIANCE
 .SH NAME
 rtrace - trace rays in RADIANCE scene
@@ -86,6 +86,8 @@ o	origin (input)
 d	direction (normalized)
 .IP
 v	value (radiance)
+.IP
+V	contribution (radiance)
 .IP
 w	weight
 .IP
